# daub

./: .gitignore  Cargo.toml  dune-project
daub/: Cargo.toml
daub-ocaml/: Cargo.toml  README.md
daub-ocaml/src/: daub.ml  daub.mli  dune  lib.rs
daub/examples/: image.rs  text.rs  window.rs
daub/src/: color.rs  geometry.rs  lib.rs  scene.rs  winit.rs
daub/src/primitive/: mod.rs  quad.rs  quad.wgsl
daub/src/primitive/image/: atlas.rs  mod.rs  renderer.rs  shader.wgsl
daub/src/primitive/quad/: mod.rs  renderer.rs  shader.wgsl
daub/src/primitive/text/: mod.rs  renderer.rs
daub/src/render/: mod.rs
examples/: window.rs
src/: geometry.rs  layer.rs  lib.rs  scene.rs  winit.rs
src/primitive/: mod.rs  quad.rs  quad.wgsl
src/render/: mod.rs
