[workspace]
members = ["daub", "daub-ocaml"]
resolver = "3"

[workspace.dependencies]
ocaml = "=1.3.0"

[workspace.lints.rust]
meta_variable_misuse = "warn"

missing_debug_implementations = "warn"
# TODO: enable fully once the public API is ready
missing_docs = "allow"

non_ascii_idents = "deny"

unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "deny"

# TODO
unused_crate_dependencies = "allow"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"

# Lint suppressions
allow_attributes = "warn"
allow_attributes_without_reason = "warn"

# Ownership and strings
clone_on_ref_ptr = "warn"
rc_buffer = "warn"
str_to_string = "warn"

# Debug and terminal output
dbg_macro = "warn"
print_stderr = "warn"
print_stdout = "warn"

# Panics and unfinished code
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
unwrap_used = "warn"

# Unsafe code
undocumented_unsafe_blocks = "warn"
