[package]
name = "daub"
version = "0.1.0"
edition = "2024"
description = "A lightweight 2D drawing library built on top of wgpu"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tsoutsman/daub"
readme = "README.md"
keywords = ["wgpu"]
categories = ["rendering::engine"]

[dependencies]
bytemuck = { version = "=1.25.2", features = ["derive"] }
derive_setters = "=0.1.9"
glyphon = { version = "=0.12.0", optional = true }
pollster = { version = "=0.4.0", optional = true }
winit = { version = "=0.30.13", optional = true }
wgpu = "=30.0.0"

[dev-dependencies]
wgpu = { version = "=30.0.0", features = ["noop"] }

[features]
text = ["dep:glyphon"]
winit = ["dep:pollster", "dep:winit"]

default = []

[[example]]
name = "window"
required-features = ["winit"]

[lints]
workspace = true
