[package]
name = "daub"
version = "0.1.0"
edition = "2024"
description = "A lightweight 2D drawing library built on top of wgpu"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tsoutsman/daub"
readme = "README.md"
keywords = ["wgpu"]
categories = ["rendering::engine"]

[dependencies]
bytemuck = { version = "=1.25.2", features = ["derive"] }
derive_setters = "=0.1.9"
glyphon = { version = "=0.12.0", optional = true }
ocaml = { workspace = true, optional = true }
pollster = { version = "=0.4.0", optional = true }
serde = { version = "=1.0.229", features = ["derive"], optional = true }
winit = { version = "=0.30.13", optional = true }
wgpu = "=30.0.0"

[dev-dependencies]
wgpu = { version = "=30.0.0", features = ["noop"] }

[features]
image = []
ocaml = ["dep:ocaml"]
serde = ["dep:serde"]
text = ["dep:glyphon"]
winit = ["dep:pollster", "dep:winit"]

default = ["image", "ocaml", "serde", "text", "winit"]

[[example]]
name = "window"
required-features = ["winit"]

[[example]]
name = "text"
required-features = ["text", "winit"]

[[example]]
name = "image"
required-features = ["image", "winit"]

[lints]
workspace = true
